--- a/src/components/Chessboard/Chessboard.css
+++ b/src/components/Chessboard/Chessboard.css
@@ -1,9 +1,9 @@
-
 #chessboard {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     width: 800px;
     height: 800px;
+    margin: 20px auto;
 }
 
 .tile {
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     font-size: 12px;
-    border : 2px solid darkgrey;
+    border: 2px solid darkgrey;
 }
 
 .white-tile {
@@ -26,25 +26,44 @@
 }
 
 .forbidden-tile {
-    background-color: indianred; /* 배치 불가능한 타일의 색상을 약간 진하게 설정 */
+    background-color: darkred;
 }
 
 .queen {
     position: absolute;
     width: 40px;
     height: 40px;
-    top : 50%;
-    left : 50%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     pointer-events: none;
-     /* 이미지 위로 마우스 이벤트가 전달되지 않도록 설정 */
 }
 
 .message {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(255, 255, 255, 0.8); /* 투명도 조절 가능 */
+    text-align: center;
+    margin-top: 20px;
+    font-size: 18px;
     padding: 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 80%;
+    margin: 0 auto 20px;    
+}
+
+.buttonContainer {
+    text-align: center;
+}
+
+.resetButton {
+    width: 120px;
+    height: 40px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.resetButton:hover {
+    background-color: #45a049;
 }
